# PPC_DZ3_Task2_BezzabotnovDV_UnitTest

./: CMakeLists.txt  PPC_DZ3_Task2_BezzabotnovDV_UnitTest.cpp  Test.cpp  my_list.h
